version/0.8/_sources/api/ansys/geometry/core/designer/design/DesignFileFormat.rst.txt






:class:`DesignFileFormat`
=========================

.. py:class:: ansys.geometry.core.designer.design.DesignFileFormat(*args, **kwds)

   Bases: :py:obj:`enum.Enum`


   
   Provides supported file formats that can be downloaded for designs.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: DesignFileFormat

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~SCDOCX`
            - 
          * - :py:attr:`~PARASOLID_TEXT`
            - 
          * - :py:attr:`~PARASOLID_BIN`
            - 
          * - :py:attr:`~FMD`
            - 
          * - :py:attr:`~STEP`
            - 
          * - :py:attr:`~IGES`
            - 
          * - :py:attr:`~PMDB`
            - 
          * - :py:attr:`~STRIDE`
            - 
          * - :py:attr:`~DISCO`
            - 
          * - :py:attr:`~INVALID`
            - 






Import detail
-------------

.. code-block:: python

    from ansys.geometry.core.designer.design import DesignFileFormat


Attribute detail
----------------

.. py:attribute:: SCDOCX

.. py:attribute:: PARASOLID_TEXT

.. py:attribute:: PARASOLID_BIN

.. py:attribute:: FMD

.. py:attribute:: STEP

.. py:attribute:: IGES

.. py:attribute:: PMDB

.. py:attribute:: STRIDE

.. py:attribute:: DISCO

.. py:attribute:: INVALID
   :value: ('INVALID', None)






